--- a/data/raw/chem/aggregation-induced_emission/human_todo/paper_10.yaml
+++ b/data/raw/chem/aggregation-induced_emission/human_todo/paper_10.yaml
@@ -54,64 +54,46 @@ blocks:
     with their mechanical behaviors, thermoresponsive toughening, and crack multi-bifurcation, we gain a deep understanding
     of their structure–property relationships and propose a detailed strengthening mechanism of hydrogels.'
   citations:
-  - marker: '[9]'
-    intent_label: Domain Overview
-    topic_label: aggregation-induced emission
-  - marker: '[10]'
-    intent_label: Domain Overview
-    topic_label: aggregation-induced emission
+  - marker: '[9,10]'
+    intent_label: Prospective Application
+    topic_label: Hydrogen-bonded polymer networks and gels
   - marker: '[11]'
     intent_label: Importance of Problem
-    topic_label: aggregation-induced emission
-  - marker: '[12]'
-    intent_label: Prior Methods
-    topic_label: aggregation-induced emission
-  - marker: '[13]'
-    intent_label: Prior Methods
-    topic_label: aggregation-induced emission
+    topic_label: Hydrogen-bonded polymer networks and gels
+  - marker: '[12,13]'
+    intent_label: Domain Overview
+    topic_label: Hydrogen-bonded polymer networks and gels
   - marker: '[14]'
     intent_label: Prior Methods
-    topic_label: aggregation-induced emission
+    topic_label: Hydrogen-bonded polymer networks and gels
   - marker: '[15]'
     intent_label: Prior Methods
-    topic_label: aggregation-induced emission
+    topic_label: Hydrogen-bonded polymer networks and gels
   - marker: '[16]'
     intent_label: Prior Methods
-    topic_label: aggregation-induced emission
-  - marker: '[17]'
+    topic_label: Hydrogen-bonded polymer networks and gels
+  - marker: '[17,18]'
     intent_label: Prior Methods
     topic_label: Doping and encapsulation into polymer matrices
-  - marker: '[18]'
-    intent_label: Prior Methods
-    topic_label: aggregation-induced emission
-  - marker: '[19]'
-    intent_label: Prior Methods
-    topic_label: aggregation-induced emission
-  - marker: '[20]'
-    intent_label: Prior Methods
-    topic_label: aggregation-induced emission
-  - marker: '[21]'
+  - marker: '[19,20]'
     intent_label: Prior Methods
     topic_label: Hydrogen-bonded polymer networks and gels
-  - marker: '[22]'
+  - marker: '[21,22]'
     intent_label: Prior Methods
-    topic_label: aggregation-induced emission
+    topic_label: Hydrogen-bonded polymer networks and gels
   - marker: '[23]'
     intent_label: Prior Methods
-    topic_label: aggregation-induced emission
+    topic_label: Hydrogen-bonded polymer networks and gels
   - marker: '[24]'
     intent_label: Domain Overview
-    topic_label: aggregation-induced emission
-  - marker: '[25]'
+    topic_label: Hydrogen-bonded polymer networks and gels
+  - marker: '[25,26]'
     intent_label: Prior Methods
-    topic_label: aggregation-induced emission
-  - marker: '[26]'
-    intent_label: Prior Methods
-    topic_label: aggregation-induced emission
-  - marker: '[30]'
+    topic_label: Hydrogen-bonded polymer networks and gels
+  - marker: '[27–29]'
     intent_label: Research Gap
-    topic_label: Chemosensing and analyte detection
-  - marker: '[31]'
+    topic_label: Hydrogen-bonded polymer networks and gels
+  - marker: '[30,31]'
     intent_label: Research Gap
     topic_label: Chemosensing and analyte detection
   - marker: '[32]'
@@ -269,9 +251,9 @@ blocks:
     topic_label: Photophysical responsive systems
   - marker: '[38]'
     intent_label: Domain Overview
-    topic_label: Doping and encapsulation into polymer matrices
+    topic_label: Photophysical responsive systems
   - marker: '[39]'
-    intent_label: Domain Overview
+    intent_label: Prior Methods
     topic_label: Supramolecular strategies
 - block_id: 6
   content: 'After exploring the stimuli-responsive and composition-dependent microphase separation of GN2D3, GN3D3, and GN6D3,
@@ -377,7 +359,10 @@ blocks:
     microphase separation patterns. Briefly, the above-mentioned mechanical behaviors of sacrificing the noncovalent interactions
     or weak interfaces between two separated phases in order to retard the fracture failure and preserve the integrity of
     the whole exactly match the proposed concept of morphomechanics.'
-  citations: []
+  citations:
+  - marker: '[43–45]'
+    intent_label: Domain Overview
+    topic_label: Hydrogen-bonded polymer networks and gels
 - block_id: 8
   content: 'In summary, we have successfully realized the direct visualization at mesoscale level of microphase separation
     with easy differentiation of hydrophobic collapsed PNIPAM domains in gels by developing a fluorescent indicator with both
@@ -401,4 +386,4 @@ blocks:
   citations:
   - marker: '[46]'
     intent_label: Prospective Application
-    topic_label: Hydrogen-bonded polymer networks and gels
+    topic_label: Applications of AIE materials
