--- a/data/raw/chem/aggregation-induced_emission/human_todo/paper_4.yaml
+++ b/data/raw/chem/aggregation-induced_emission/human_todo/paper_4.yaml
@@ -80,7 +80,85 @@ blocks:
     25.1%. These remarkable results validate the effectiveness of the acceptor dendronization strategy for achieving efficient
     RTP both in solution and in solid states, elucidating the mechanism of restricting molecular motion to achieve efficient
     RTP.'
-  citations: []
+  citations:
+  - marker: 1−5
+    intent_label: Domain Overview
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '6'
+    intent_label: Prospective Application
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '7'
+    intent_label: Prospective Application
+    topic_label: Photopatterning and optical data storage
+  - marker: '8'
+    intent_label: Prospective Application
+    topic_label: Photoacoustic imaging
+  - marker: '9'
+    intent_label: Prospective Application
+    topic_label: Chemosensing and analyte detection
+  - marker: '10'
+    intent_label: Prospective Application
+    topic_label: Chemosensing and analyte detection
+  - marker: '11'
+    intent_label: Research Gap
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '12'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '13'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '14'
+    intent_label: Prior Methods
+    topic_label: Doping and encapsulation into polymer matrices
+  - marker: '15'
+    intent_label: Prior Methods
+    topic_label: Doping and encapsulation into polymer matrices
+  - marker: '16'
+    intent_label: Prior Methods
+    topic_label: Supramolecular strategies
+  - marker: '17'
+    intent_label: Prior Methods
+    topic_label: Supramolecular strategies
+  - marker: '4'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '18'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '19'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '20'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '21'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '22'
+    intent_label: Domain Overview
+    topic_label: Processing and additive manufacturing methods
+  - marker: '23'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '24'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: 25−28
+    intent_label: Domain Overview
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '29'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '30'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '31'
+    intent_label: Prior Methods
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '32'
+    intent_label: Domain Overview
+    topic_label: Radiative decay pathways for bright emission
 - block_id: 2
   content: ''
   citations: []
@@ -155,7 +233,13 @@ blocks:
     findings reveal that acceptor dendronization can also lead to an increase in the ISC pathways, SOC (T1, S0), and μT1→S0
     for these dendrimers, and they are anticipated to exhibit efficient RTP. These calculated results support the universality
     of the acceptor dendronization strategy to achieve efficient RTP emission.'
-  citations: []
+  citations:
+  - marker: '34'
+    intent_label: Algorithm/Principle Adoption
+    topic_label: Radiative decay pathways for bright emission
+  - marker: 35,36
+    intent_label: null
+    topic_label: Radiative decay pathways for bright emission
 - block_id: 4
   content: 'To verify the feasibility of this acceptor dendronization strategy for achieving efficient RTP, the acceptor-dendronized
     dendrimer dTC-BPSAF was successfully synthesized. The ultraviolet−visible absorption spectrum in toluene solution reveals
@@ -235,7 +319,16 @@ blocks:
     BPSAF displays very small upfield-shifted peaks upon cooling, indicating a smaller reduction in molecular motion and a
     weaker shielding effect due to the lack of intramolecular through-space interactions. These results demonstrate that acceptor
     dendronization significantly restricts molecular rotation and increases intramolecular through-space interactions.'
-  citations: []
+  citations:
+  - marker: '21'
+    intent_label: Domain Overview
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '29'
+    intent_label: Domain Overview
+    topic_label: Radiative decay pathways for bright emission
+  - marker: '30'
+    intent_label: Domain Overview
+    topic_label: Radiative decay pathways for bright emission
 - block_id: 5
   content: 'To investigate the RTP properties from solution to aggregate states, the PL properties of dTC-BPSAF in a dilute
     THF/water solution were measured. The PL intensity of dTC-BPSAF exhibits a significant increase with the addition of water
