--- a/data/raw/chem/aggregation-induced_emission/human_todo/paper_6.yaml
+++ b/data/raw/chem/aggregation-induced_emission/human_todo/paper_6.yaml
@@ -76,7 +76,7 @@ blocks:
     achieved the photodynamic patterning of living organisms in a customizable fashion and investigated the dynamic changes
     of the resulting biopatterns.'
   citations:
-  - marker: '[1] c)'
+  - marker: '[1]'
     intent_label: Domain Overview
     topic_label: Characteristic interactions in charged systems
   - marker: '[2]'
@@ -97,54 +97,54 @@ blocks:
   - marker: '[7]'
     intent_label: Research Gap
     topic_label: Polyelectrolyte architectures and single-chain aggregates
-  - marker: '[8] d)'
+  - marker: '[8]'
     intent_label: Domain Overview
     topic_label: Polyelectrolyte architectures and single-chain aggregates
-  - marker: '[9] c)'
+  - marker: '[9]'
     intent_label: Prior Methods
-    topic_label: Main-chain copolymerization of difunctional monomers
+    topic_label: Polyelectrolyte architectures and single-chain aggregates
   - marker: '[10]'
     intent_label: Research Gap
-    topic_label: Main-chain copolymerization of difunctional monomers
-  - marker: '[11] d)'
+    topic_label: Polyelectrolyte architectures and single-chain aggregates
+  - marker: '[11]'
     intent_label: Prior Methods
-    topic_label: Main-chain copolymerization of difunctional monomers
+    topic_label: Polyelectrolyte architectures and single-chain aggregates
   - marker: '[12]'
     intent_label: Research Gap
-    topic_label: Main-chain copolymerization of difunctional monomers
+    topic_label: Polyelectrolyte architectures and single-chain aggregates
   - marker: '[13]'
     intent_label: Prior Methods
     topic_label: Postmodification of polymer precursors
   - marker: '[14]'
-    intent_label: Research Gap
+    intent_label: Prior Methods
     topic_label: Main-chain copolymerization of difunctional monomers
-  - marker: '[15] b)'
+  - marker: '[15]'
     intent_label: Domain Overview
     topic_label: In situ and charge-generating polymerizations
-  - marker: '[16] b)'
+  - marker: '[16]'
     intent_label: Domain Overview
     topic_label: Polyelectrolyte architectures and single-chain aggregates
-  - marker: '[17] b)'
+  - marker: '[17]'
     intent_label: Research Gap
     topic_label: Polyelectrolyte architectures and single-chain aggregates
   - marker: '[18]'
     intent_label: Domain Overview
     topic_label: Characteristic interactions in charged systems
-  - marker: '[19] b)'
+  - marker: '[19]'
     intent_label: Domain Overview
     topic_label: Radiative decay pathways for bright emission
-  - marker: '[20] b)'
+  - marker: '[20]'
     intent_label: Prospective Application
     topic_label: Radiative decay pathways for bright emission
-  - marker: '[21] d)'
+  - marker: '[21]'
     intent_label: Prospective Application
     topic_label: Photosensitization for ROS generation
-  - marker: '[22] b)'
+  - marker: '[14,22]'
     intent_label: Prospective Application
     topic_label: Characteristic interactions in charged systems
-  - marker: '[23] e)'
+  - marker: '[23]'
     intent_label: Prospective Application
-    topic_label: Photopatterning and optical data storage
+    topic_label: Photodynamic therapy and antimicrobial treatment
   - marker: '[24]'
     intent_label: Algorithm/Principle Adoption
     topic_label: In situ and charge-generating polymerizations
@@ -354,36 +354,36 @@ blocks:
   - marker: '[25]'
     intent_label: Algorithm/Principle Adoption
     topic_label: In situ and charge-generating polymerizations
-  - marker: '[26] b)'
+  - marker: '[26]'
     intent_label: Domain Overview
     topic_label: Polyelectrolyte architectures and single-chain aggregates
   - marker: '[28]'
     intent_label: Research Gap
     topic_label: Radiative decay pathways for bright emission
-  - marker: '[29] c)'
+  - marker: '[29]'
     intent_label: Prospective Application
     topic_label: Photopatterning and optical data storage
   - marker: '[30]'
     intent_label: Domain Overview
-    topic_label: Characteristic interactions in charged systems
+    topic_label: Rotor-rich ionic cores and donor–acceptor scaffolds
   - marker: '[31]'
     intent_label: Result Comparison
     topic_label: Photopatterning and optical data storage
-  - marker: '[32] b)'
+  - marker: '[32]'
     intent_label: Prospective Application
     topic_label: Photopatterning and optical data storage
-  - marker: '[33]'
+  - marker: '[19b,33]'
     intent_label: Domain Overview
     topic_label: Photosensitization for ROS generation
-  - marker: '[34] c)'
-    intent_label: Importance of Problem
+  - marker: '[34]'
+    intent_label: Prospective Application
     topic_label: Photosensitization for ROS generation
-  - marker: '[35] b)'
+  - marker: '[35]'
     intent_label: Metrics Utilization
     topic_label: Photosensitization for ROS generation
-  - marker: '[36] b)'
+  - marker: '[36]'
     intent_label: Prospective Application
-    topic_label: Photopatterning and optical data storage
+    topic_label: Photodynamic therapy and antimicrobial treatment
 - block_id: 3
   content: We developed an efficient multicomponent polymerization to in situ generate functional heteroaromatic hyperbranched
     polyelectrolytes using readily accessible internal diynes and low-cost, commercially available arylnitriles, NaSbF6, and
