--- a/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_2.yaml
@@ -73,7 +73,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Construction of photoresponsive AIE polymers"
 - "unique_context_marker": "[22−24]"
@@ -96,7 +96,7 @@
   - 5
   "intent_labels":
   - "Domain Overview"
-  - "Algorithm/Principle Adoption"
+  - "Domain Overview"
   "topic_labels":
   - "In situ and charge-generating polymerizations"
   - "In situ and charge-generating polymerizations"
@@ -106,21 +106,21 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Main-chain copolymerization of difunctional monomers"
 - "unique_context_marker": "[31]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Hydrogen-bonded polymer networks and gels"
+  - "Supramolecular strategies"
 - "unique_context_marker": "[26,31]"
   "block_ids":
   - 5
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Supramolecular strategies"
+  - "Hydrogen-bonded polymer networks and gels"
 - "unique_context_marker": "[16,18,32]"
   "block_ids":
   - 7
