--- a/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_3.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_3.yaml
@@ -17,7 +17,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Importance of Problem"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
 - "unique_context_marker": "9,10"
@@ -47,7 +47,7 @@
   - 5
   "intent_labels":
   - "Domain Overview"
-  - "Other Intent"
+  - "Domain Overview"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
   - "Photodynamic therapy and antimicrobial treatment"
@@ -62,7 +62,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
 - "unique_context_marker": "18"
@@ -125,23 +125,23 @@
   "block_ids":
   - 3
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Photosensitization for ROS generation"
+  - "Other Topic"
 - "unique_context_marker": "41"
   "block_ids":
   - 3
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Photosensitization for ROS generation"
+  - "Other Topic"
 - "unique_context_marker": "42"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photosensitization for ROS generation"
+  - "Other Topic"
 - "unique_context_marker": "31"
   "block_ids":
   - 4
@@ -167,7 +167,7 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Other Intent"
+  - "Result Comparison"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
 - "unique_context_marker": "48,49"
