--- a/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_4.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_4.yaml
@@ -12,7 +12,7 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Radiative decay pathways for bright emission"
+  - "Applications of AIE materials"
 - "unique_context_marker": "7"
   "block_ids":
   - 1
@@ -26,7 +26,7 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Radiative decay pathways for bright emission"
+  - "Applications of AIE materials"
 - "unique_context_marker": "9"
   "block_ids":
   - 1
@@ -103,7 +103,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Radiative decay pathways for bright emission"
+  - "Characteristic interactions in charged systems"
 - "unique_context_marker": "19"
   "block_ids":
   - 1
@@ -126,8 +126,8 @@
   - "Prior Methods"
   - "Domain Overview"
   "topic_labels":
-  - "Radiative decay pathways for bright emission"
-  - "Radiative decay pathways for bright emission"
+  - "Characteristic interactions in charged systems"
+  - "Other Topic"
 - "unique_context_marker": "22"
   "block_ids":
   - 1
@@ -162,32 +162,32 @@
   - 4
   "intent_labels":
   - "Domain Overview"
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
-  - "Radiative decay pathways for bright emission"
-  - "Radiative decay pathways for bright emission"
+  - "Characteristic interactions in charged systems"
+  - "Other Topic"
 - "unique_context_marker": "30"
   "block_ids":
   - 1
   - 4
   "intent_labels":
   - "Domain Overview"
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
-  - "Radiative decay pathways for bright emission"
-  - "Radiative decay pathways for bright emission"
+  - "Characteristic interactions in charged systems"
+  - "Other Topic"
 - "unique_context_marker": "31"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Radiative decay pathways for bright emission"
+  - "Characteristic interactions in charged systems"
 - "unique_context_marker": "32"
   "block_ids":
   - 1
   "intent_labels":
-  - "Other Intent"
+  - "Domain Overview"
   "topic_labels":
   - "Radiative decay pathways for bright emission"
 - "unique_context_marker": "34"
@@ -201,6 +201,6 @@
   "block_ids":
   - 3
   "intent_labels":
-  - "Other Intent"
+  - "Domain Overview"
   "topic_labels":
   - "Radiative decay pathways for bright emission"
