--- a/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-2025-08-07/paper_3.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-2025-08-07/paper_3.yaml
@@ -1,246 +1,258 @@
 "citations":
-- "title": "Ten Threats to Global Health in 2019"
-  "unique_context_marker": "(1)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "The Global Challenges of Infectious Diseases"
-  "unique_context_marker": "(2)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Potential Role of Intratumor Bacteria in Mediating Tumor Resistance to the Chemotherapeutic Drug Gemcitabine"
-  "unique_context_marker": "(3)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Gut Microbiome Influences Efficacy of PD-1−Based Immunotherapy Against Epithelial Tumors"
-  "unique_context_marker": "(4)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Fusobacterium Nucleatum Promotes Chemoresistance to Colorectal Cancer by Modulating Autophagy"
-  "unique_context_marker": "(5)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Phage-Guided Modulation of the Gut Microbiota of Mouse Models of Colorectal Cancer Augments Their Responses to Chemotherapy"
-  "unique_context_marker": "(6)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Host-Gut Microbiota Metabolic Interactions"
-  "unique_context_marker": "(7)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Functional Interactions between the Gut Microbiota and Host Metabolism"
-  "unique_context_marker": "(8)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Antibiotics Induce Sustained Dysregulation of Intestinal T Cell Immunity by Perturbing Macrophage Homeostasis"
-  "unique_context_marker": "(9)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "’Blooming’ in the Gut: How Dysbiosis Might Contribute to Pathogen Evolution"
-  "unique_context_marker": "(10)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Annual Report of the Chief Medical Officer: Infection and the Rise of Antimicrobial Resistance"
-  "unique_context_marker": "(11)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Methods for the Detection and Identification of Pathogenic Bacteria: Past, Present, and Future"
-  "unique_context_marker": "(12)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Technologies to Address Antimicrobial Resistance"
-  "unique_context_marker": "(13)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Targeting Mechanisms of Tailed Bacteriophages"
-  "unique_context_marker": "(14)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Old Dogma, New Tricks — 21st Century Phage Therapy"
-  "unique_context_marker": "(15)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Experimental Coevolution with Bacteria and Phage: The Pseudomonas Fluorescens–Φ2 Model System"
-  "unique_context_marker": "(16)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Population and Evolutionary Dynamics of Phage Therapy"
-  "unique_context_marker": "(17)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Phages Limit the Evolution of Bacterial Antibiotic Resistance in Experimental Microcosms"
-  "unique_context_marker": "(18)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Efficient Enrichment and Analyses of Bacteria at Ultralow Concentration with Quick-Response Magnetic Nanospheres"
-  "unique_context_marker": "(19)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "New Strategies for Fluorescent Probe Design in Medical Diagnostic Imaging"
-  "unique_context_marker": "(20)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Catalytic Molecular Imaging of MicroRNA in Living Cells by DNA-Programmed Nanoparticle Disassembly"
-  "unique_context_marker": "(21)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Ultrasensitive Virion Immunoassay Platform with Dual-Modality Based on a Multifunctional Aggregation-Induced Emission Luminogen"
-  "unique_context_marker": "(22)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "AIE Featured Inorganic-Organic Core@Shell Nanoparticle for High-Efficiency SiRNA Delivery and Real-Time Monitoring"
-  "unique_context_marker": "(23)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Biosensing by Luminogens with Aggregation-Induced Emission Characteristics"
-  "unique_context_marker": "(24)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Redox-Active AIEgen-Derived Plasmonic and Fluorescent Core@Shell Nanoparticles for Multimodality Bioimaging"
-  "unique_context_marker": "(25)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Aggregation-Induced Emission: Together We Shine, United We Soar!"
-  "unique_context_marker": "(26)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Visualization of Drug Delivery Processes Using AIEgens"
-  "unique_context_marker": "(27)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Near-Infrared Afterglow Luminescent Aggregation-Induced Emission Dots with Ultrahigh Tumor-to-Liver Signal Ratio for Promoted Image-Guided Cancer Surgery"
-  "unique_context_marker": "(28)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Aggregation-Induced Emission (AIE) Fluorophores as Imaging Tools to Trace the Biological Fate of Nano-Based Drug Delivery Systems"
-  "unique_context_marker": "(29)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Chemiluminescence-Guided Cancer Therapy Using a Chemiexcited Photosensitizer"
-  "unique_context_marker": "(30)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "AIE-Based Theranostic Systems for Detection and Killing of Pathogens"
-  "unique_context_marker": "(31)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "In Situ Generation of Azonia-Containing Polyelectrolytes for Luminescent Photopatterning and Superbug Killing"
-  "unique_context_marker": "(32)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Photosensitizers for Photodynamic Therapy"
-  "unique_context_marker": "(33)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Membrane Intercalation-Enhanced Photodynamic Inactivation of Bacteria by a Metallacycle and TAT-Decorated Virus Coat Protein"
-  "unique_context_marker": "(34)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A Multifunctional Luminogen with Aggregation-Induced Emission Characteristics for Selective Imaging and Photodynamic Killing of both Cancer Cells and Gram-Positive Bacteria"
-  "unique_context_marker": "(35)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Evaluation of Structure−Function Relationships of Aggregation-Induced Emission Luminogens for Simultaneous Dual Applications of Specific Discrimination and Efficient Photodynamic Killing of Gram-Positive Bacteria"
-  "unique_context_marker": "(36)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Metal−Organic-Framework-Assisted In Vivo Bacterial Metabolic Labeling and Precise Antibacterial Therapy"
-  "unique_context_marker": "(37)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A Light-Up Probe with Aggregation-Induced Emission for Real-Time Bio-orthogonal Tumor Labeling and Image-Guided Photodynamic Therapy"
-  "unique_context_marker": "(38)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Does Rose Bengal Triplet Generate Superoxide Anion?"
-  "unique_context_marker": "(39)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Water-Soluble Polythiophene for Two-Photon Excitation Fluorescence Imaging and Photodynamic Therapy of Cancer"
-  "unique_context_marker": "(40)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Tuning Organelle Specificity and Photodynamic Therapy Efficiency by Molecular Function Design"
-  "unique_context_marker": "(41)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Triplet-Singlet Transitions in Organic Molecules. Lifetime Measurements of the Triplet State"
-  "unique_context_marker": "(42)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Protein Phylogenies and Signature Sequences: A Reappraisal of Evolutionary Relationships among Archaebacteria, Eubacteria, and Eukaryotes"
-  "unique_context_marker": "(43)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Emerging Trends in Macromolecular Antimicrobials to Fight Multi-Drug-Resistant Infections"
-  "unique_context_marker": "(44)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A Bifunctional Aggregation-Induced Emission Luminogen for Monitoring and Killing of Multidrug-Resistant Bacteria"
-  "unique_context_marker": "(45)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "An AIEgen-Peptide Conjugate as a Phototheranostic Agent for Phagosome-Entrapped Bacteria"
-  "unique_context_marker": "(46)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Visualization and In Situ Ablation of Intracellular Bacterial Pathogens through Metabolic Labeling"
-  "unique_context_marker": "(47)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Recent Advances in Nanomaterial-Based Synergistic Combination Cancer Immunotherapy"
-  "unique_context_marker": "(48)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Nanotechnology for Multimodal Synergistic Cancer Therapy"
-  "unique_context_marker": "(49)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
+- "unique_context_marker": "1,2"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "3−6"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "7,8"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "9,10"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "11,12"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "13"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "14"
+  "block_ids":
+  - 1
+  - 5
+  "intent_labels":
+  - []
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "15,16"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "17"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "18"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "19−21"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "22−25"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "26"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "27−29"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Radiative decay pathways for bright emission"
+    - "Radiative decay pathways for bright emission"
+    - "Radiative decay pathways for bright emission"
+    - "Radiative decay pathways for bright emission"
+    - "Radiative decay pathways for bright emission"
+- "unique_context_marker": "30−34"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "35,36"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Chemosensing and analyte detection"
+    - "Chemosensing and analyte detection"
+    - "Chemosensing and analyte detection"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Chemosensing and analyte detection"
+- "unique_context_marker": "37,38"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Chemosensing and analyte detection"
+    - "Chemosensing and analyte detection"
+    - "Chemosensing and analyte detection"
+    - "Postmodification of polymer precursors"
+    - "Chemosensing and analyte detection"
+- "unique_context_marker": "39,40"
+  "block_ids":
+  - 3
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+- "unique_context_marker": "41"
+  "block_ids":
+  - 3
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+- "unique_context_marker": "42"
+  "block_ids":
+  - 3
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+- "unique_context_marker": "31"
+  "block_ids":
+  - 4
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "43,44"
+  "block_ids":
+  - 4
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "35"
+  "block_ids":
+  - 4
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "36,45−47"
+  "block_ids":
+  - 5
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "48,49"
+  "block_ids":
+  - 6
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "32"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "45"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
