--- a/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-2025-08-07/paper_7.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-2025-08-07/paper_7.yaml
@@ -1,64 +1,5 @@
 "citations":
-- "title": ""
-  "unique_context_marker": "[1]"
-  "block_ids":
-  - 2
-  "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Algorithm/Principle Adoption"
-  "topic_labels":
-  - - "Radiative decay pathways for bright emission"
-    - "Radiative decay pathways for bright emission"
-    - "Radiative decay pathways for bright emission"
-    - "Radiative decay pathways for bright emission"
-    - "Radiative decay pathways for bright emission"
-- "title": ""
-  "unique_context_marker": "[2]"
-  "block_ids":
-  - 2
-  "intent_labels":
-  - - "Algorithm/Principle Adoption"
-    - "Domain Overview"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-  "topic_labels":
-  - - "Photosensitization for ROS generation"
-    - "Radiative decay pathways for bright emission"
-    - "Radiative decay pathways for bright emission"
-    - "Rotor-rich ionic cores and donor–acceptor scaffolds"
-    - "Photosensitization for ROS generation"
-- "title": ""
-  "unique_context_marker": "[3]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[4]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[5]"
-  "block_ids":
-  - 2
-  "intent_labels":
-  - - "Domain Overview"
-    - "Algorithm/Principle Adoption"
-    - "Domain Overview"
-    - "Resource Utilization"
-    - "Algorithm/Principle Adoption"
-  "topic_labels":
-  - - "Photosensitization for ROS generation"
-    - "Photosensitization for ROS generation"
-    - "Photosensitization for ROS generation"
-    - "Photosensitization for ROS generation"
-    - "Photosensitization for ROS generation"
-- "title": ""
-  "unique_context_marker": "[6]"
+- "unique_context_marker": "[1–5]"
   "block_ids":
   - 1
   "intent_labels":
@@ -69,8 +10,7 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[7]"
+- "unique_context_marker": "[6,7]"
   "block_ids":
   - 1
   "intent_labels":
@@ -81,8 +21,7 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[8]"
+- "unique_context_marker": "[8,9]"
   "block_ids":
   - 1
   "intent_labels":
@@ -93,8 +32,7 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[9]"
+- "unique_context_marker": "[10,11]"
   "block_ids":
   - 1
   "intent_labels":
@@ -105,8 +43,7 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[10]"
+- "unique_context_marker": "[12–14]"
   "block_ids":
   - 1
   "intent_labels":
@@ -117,192 +54,7 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[11]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[12]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[13]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[14]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[15]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[16]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[17]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[18]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[19]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[20]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[21]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[22]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[24]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[25]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[26]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[27]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[28]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[29]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[30]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[31]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[32]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[33]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[34]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[35]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[36]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[37]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[38]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[39]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[40]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[41]"
+- "unique_context_marker": "[15–21]"
   "block_ids":
   - 1
   "intent_labels":
@@ -311,42 +63,11 @@
   - - "Photosensitization for ROS generation"
     - "Photosensitization for ROS generation"
     - "Photosensitization for ROS generation"
-    - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[42]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[43]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[44]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[45]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[46]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[47]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[48]"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+- "unique_context_marker": "[22–24]"
   "block_ids":
-  - 6
+  - 1
   "intent_labels":
   - []
   "topic_labels":
@@ -355,10 +76,9 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[49]"
+- "unique_context_marker": "[9,25]"
   "block_ids":
-  - 6
+  - 1
   "intent_labels":
   - []
   "topic_labels":
@@ -367,10 +87,9 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[50]"
+- "unique_context_marker": "[26,27]"
   "block_ids":
-  - 6
+  - 1
   "intent_labels":
   - []
   "topic_labels":
@@ -379,10 +98,9 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[51]"
+- "unique_context_marker": "[28]"
   "block_ids":
-  - 6
+  - 1
   "intent_labels":
   - []
   "topic_labels":
@@ -391,10 +109,60 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[52]"
+- "unique_context_marker": "[29,30]"
   "block_ids":
-  - 7
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[14]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[31–35]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[36]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[37]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[38–40]"
+  "block_ids":
+  - 1
   "intent_labels":
   - - "Prior Methods"
     - "Prior Methods"
@@ -403,10 +171,9 @@
     - "Prior Methods"
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[53]"
+- "unique_context_marker": "[41]"
   "block_ids":
-  - 9
+  - 1
   "intent_labels":
   - []
   "topic_labels":
@@ -415,10 +182,16 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[54]"
+- "unique_context_marker": "[42–47]"
   "block_ids":
-  - 9
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[48,49]"
+  "block_ids":
+  - 6
   "intent_labels":
   - []
   "topic_labels":
@@ -427,3 +200,28 @@
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[50,51]"
+  "block_ids":
+  - 6
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[52]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[53,54]"
+  "block_ids":
+  - 9
+  "intent_labels":
+  - - "Domain Overview"
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
