--- a/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-2025-08-07/paper_7.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-2025-08-07/paper_7.yaml
@@ -1,349 +1,155 @@
 "citations":
-- "title": ""
-  "unique_context_marker": "[1]"
-  "block_ids":
-  - 2
-  "intent_labels":
-  - null
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[2]"
-  "block_ids":
-  - 2
-  "intent_labels":
-  - null
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[3]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[4]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[5]"
-  "block_ids":
-  - 2
-  "intent_labels":
-  - null
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[6]"
+- "unique_context_marker": "[1–5]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[7]"
+- "unique_context_marker": "[6,7]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[8]"
+- "unique_context_marker": "[8,9]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[9]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Research Gap"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[10]"
+- "unique_context_marker": "[10,11]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[11]"
+- "unique_context_marker": "[12–14]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[12]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[13]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[14]"
+- "unique_context_marker": "[15–21]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Domain Overview"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[15]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[16]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[17]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[18]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[19]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[20]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[21]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[22]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[24]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[25]"
+- "unique_context_marker": "[22–24]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - "Domain Overview"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[9,25]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[26]"
+  - null
+- "unique_context_marker": "[26,27]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[27]"
+  - null
+- "unique_context_marker": "[28]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - "Research Gap"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[29,30]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - "Research Gap"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[14]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - "Research Gap"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[31–35]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[28]"
+  - "Photosensitization for ROS generation"
+- "unique_context_marker": "[36]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[29]"
+  - null
+- "unique_context_marker": "[37]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[30]"
+  - null
+- "unique_context_marker": "[38–40]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Domain Overview"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[31]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[32]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[33]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[34]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[35]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[36]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Research Gap"
-  "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[37]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Research Gap"
-  "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
-- "title": ""
-  "unique_context_marker": "[38]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[39]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[40]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[41]"
+  - "Postmodification of polymer precursors"
+- "unique_context_marker": "[41]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[42]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[43]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[44]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[45]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[46]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[47]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[48]"
+- "unique_context_marker": "[42–47]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - "Domain Overview"
+  "topic_labels":
+  - "Photosensitization for ROS generation"
+- "unique_context_marker": "[48,49]"
   "block_ids":
   - 6
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[49]"
+- "unique_context_marker": "[50,51]"
   "block_ids":
   - 6
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[50]"
-  "block_ids":
-  - 6
-  "intent_labels":
-  - "Domain Overview"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[51]"
-  "block_ids":
-  - 6
-  "intent_labels":
-  - "Domain Overview"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[52]"
+- "unique_context_marker": "[52]"
   "block_ids":
   - 7
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - "Doping and encapsulation into polymer matrices"
-- "title": ""
-  "unique_context_marker": "[53]"
+- "unique_context_marker": "[53,54]"
   "block_ids":
   - 9
   "intent_labels":
-  - "Domain Overview"
-  "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[54]"
-  "block_ids":
-  - 9
-  "intent_labels":
-  - "Domain Overview"
   "topic_labels":
   - null
