--- a/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-2025-08-07/paper_9.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-2025-08-07/paper_9.yaml
@@ -1,261 +1,186 @@
 "citations":
-- "title": "Porous, crystalline, covalent organic frameworks"
-  "unique_context_marker": "1."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Designed synthesis of 3D covalent organic frameworks"
-  "unique_context_marker": "2."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Covalent organic frameworks (COFs): from design to applications"
-  "unique_context_marker": "3."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Covalent organic frameworks: structures, synthesis, and applications"
-  "unique_context_marker": "4."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "The atom, the molecule, and the covalent organic framework"
-  "unique_context_marker": "5."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Covalent organic frameworks"
-  "unique_context_marker": "6."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Hydrophilicity gradient in covalent organic frameworks for membrane distillation"
-  "unique_context_marker": "7."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Ultrathin covalent organic framework membranes via a multi-interfacial engineering strategy for gas separation"
-  "unique_context_marker": "8."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Construction of covalent organic framework for catalysis: Pd/COF-LZU1 in Suzuki–Miyaura coupling reaction"
-  "unique_context_marker": "9."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A tunable azine covalent organic framework platform for visible light-induced hydrogen generation"
-  "unique_context_marker": "10."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Multivariate chiral covalent organic frameworks with controlled crystallinity and stability for asymmetric catalysis"
-  "unique_context_marker": "11."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Structural regulation of covalent organic frameworks for catalysis"
-  "unique_context_marker": "12."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Three-motif molecular junction type covalent organic frameworks for efficient photocatalytic aerobic oxidation"
-  "unique_context_marker": "13."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Constructing donor-acceptor covalent organic frameworks for highly efficient H2O2 photosynthesis coupled with oxidative organic transformations"
-  "unique_context_marker": "14."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Covalent organic frameworks (COFs) for cancer therapeutics"
-  "unique_context_marker": "15."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Covalent organic frameworks as favorable constructs for photodynamic therapy"
-  "unique_context_marker": "16."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Closed-loop transfer enables artificial intelligence to yield chemical knowledge"
-  "unique_context_marker": "17."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "On scientific understanding with artificial intelligence"
-  "unique_context_marker": "18."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Inclusion of more physics leads to less data: learning the interaction energy as a function of electron deformation density with limited training data"
-  "unique_context_marker": "19."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Scaling deep learning for materials discovery"
-  "unique_context_marker": "20."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Capturing chemical intuition in synthesis of metal-organic frameworks"
-  "unique_context_marker": "21."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Digital reticular chemistry"
-  "unique_context_marker": "22."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Three future directions for metal-organic frameworks"
-  "unique_context_marker": "23."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A multi-modal pre-training transformer for universal transfer learning in metal-organic frameworks"
-  "unique_context_marker": "24."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A GPT-4 reticular chemist for guiding MOF discovery"
-  "unique_context_marker": "25."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "ChatGPT research group for optimizing the crystallinity of MOFs and COFs"
-  "unique_context_marker": "26."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Shaping the water-harvesting behavior of metal-organic frameworks aided by fine-tuned GPT models"
-  "unique_context_marker": "27."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Sequential closed-loop Bayesian optimization as a guide for organic molecular metallophotocatalyst formulation discovery"
-  "unique_context_marker": "28."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Structure evolution of 2D covalent organic frameworks unveiled by single-crystal X-ray diffraction"
-  "unique_context_marker": "29."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Highly photoluminescent two-dimensional imine-based covalent organic frameworks for chemical sensing"
-  "unique_context_marker": "30."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Bayesian reaction optimization as a tool for chemical synthesis"
-  "unique_context_marker": "31."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Automated synthesis of oxygen-producing catalysts from Martian meteorites by a robotic AI chemist"
-  "unique_context_marker": "32."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Intramolecular hydrogen bonding-based topology regulation of two-dimensional covalent organic frameworks"
-  "unique_context_marker": "33."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Designed synthesis of stable light-emitting two-dimensional sp2 carbon-conjugated covalent organic frameworks"
-  "unique_context_marker": "34."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Tuneable near white-emissive two-dimensional covalent organic frameworks"
-  "unique_context_marker": "35."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Emissive single-crystalline boroxine-linked colloidal covalent organic frameworks"
-  "unique_context_marker": "36."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Linkages make a difference in the photoluminescence of covalent organic frameworks"
-  "unique_context_marker": "37."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Saturated linkers in two-dimensional covalent organic frameworks boost their luminescence"
-  "unique_context_marker": "38."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Hydrogen isotope effect endows a breakthrough in photoluminescent covalent organic frameworks"
-  "unique_context_marker": "39."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Modulation of imine-based aggregation-induced emission fluorescence performance through the extension of molecular linkers"
-  "unique_context_marker": "40."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Turning non-emissive Schiff bases into aggregate emitters"
-  "unique_context_marker": "41."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Covalent organic frameworks for optical applications"
-  "unique_context_marker": "42."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Two-photon absorption induced cancer immunotherapy using covalent organic frameworks"
-  "unique_context_marker": "43."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Metal-organic frameworks with aggregation-induced emission"
-  "unique_context_marker": "44."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Lifetime-engineered NIR-II nanoparticles unlock multiplexed in vivo imaging"
-  "unique_context_marker": "45."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Construction of LRET-based nanoprobe using upconversion nanoparticles with confined emitters and bare surface as luminophore"
-  "unique_context_marker": "46."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Facile access to far-red fluorescent probes with through-space charge-transfer effects for in vivo two-photon microscopy of the mouse cerebrovascular system"
-  "unique_context_marker": "47."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Highly two-photon and X-ray excited long-persistent luminescence in a crystalline host-guest aggregate"
-  "unique_context_marker": "48."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Covalent organic framework for efficient two-photon absorption"
-  "unique_context_marker": "49."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "SensorDBSCAN: semi-supervised active learning powered method for anomaly detection and diagnosis"
-  "unique_context_marker": "50."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A deep learning method for replicate-based analysis of chromosome conformation contacts using Siamese neural networks"
-  "unique_context_marker": "51."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "SSCNN-S: a spectral-spatial convolution neural network with Siamese architecture for change detection"
-  "unique_context_marker": "52."
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
+- "unique_context_marker": "[1–6]"
+  "block_ids":
+  - 0
+  "intent_labels":
+  - "Domain Overview"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[7,8]"
+  "block_ids":
+  - 0
+  "intent_labels":
+  - "Prospective Application"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[9–14]"
+  "block_ids":
+  - 0
+  "intent_labels":
+  - "Prospective Application"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[15,16]"
+  "block_ids":
+  - 0
+  "intent_labels":
+  - "Prospective Application"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[17–20]"
+  "block_ids":
+  - 0
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[21]"
+  "block_ids":
+  - 0
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[22–27]"
+  "block_ids":
+  - 0
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[28]"
+  "block_ids":
+  - 0
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[24–26]"
+  "block_ids":
+  - 2
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[29]"
+  "block_ids":
+  - 3
+  - 5
+  "intent_labels":
+  - "Resource Utilization"
+  - null
+  "topic_labels":
+  - null
+  - null
+- "unique_context_marker": "[30]"
+  "block_ids":
+  - 4
+  "intent_labels":
+  - "Result Comparison"
+  "topic_labels":
+  - "Radiative decay pathways for bright emission"
+- "unique_context_marker": "[28,31]"
+  "block_ids":
+  - 4
+  "intent_labels":
+  - "Research Gap"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[32]"
+  "block_ids":
+  - 5
+  "intent_labels":
+  - null
+  "topic_labels":
+  - null
+- "unique_context_marker": "[13]"
+  "block_ids":
+  - 5
+  "intent_labels":
+  - null
+  "topic_labels":
+  - null
+- "unique_context_marker": "[14]"
+  "block_ids":
+  - 5
+  "intent_labels":
+  - null
+  "topic_labels":
+  - null
+- "unique_context_marker": "[33]"
+  "block_ids":
+  - 5
+  "intent_labels":
+  - null
+  "topic_labels":
+  - null
+- "unique_context_marker": "[34–39]"
+  "block_ids":
+  - 6
+  "intent_labels":
+  - "Domain Overview"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[40]"
+  "block_ids":
+  - 6
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[41,42]"
+  "block_ids":
+  - 6
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - "Radiative decay pathways for bright emission"
+- "unique_context_marker": "[43,44]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - "Prospective Application"
+  "topic_labels":
+  - "Applications of AIE materials"
+- "unique_context_marker": "[45]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - "Domain Overview"
+  "topic_labels":
+  - "Applications of AIE materials"
+- "unique_context_marker": "[46–48]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - "Applications of AIE materials"
+- "unique_context_marker": "[49]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - "Applications of AIE materials"
+- "unique_context_marker": "[47]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - "Applications of AIE materials"
+- "unique_context_marker": "[50,51]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - "Model/Architecture Adoption"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[52]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - "Model/Architecture Adoption"
+  "topic_labels":
+  - null
