--- a/data/raw/chem/aggregation-induced_emission/human_todo/paper_8.yaml
+++ b/data/raw/chem/aggregation-induced_emission/human_todo/paper_8.yaml
@@ -81,7 +81,61 @@ blocks:
     resistance to postsurgical recurrent and rechallenged tumors are clearly demonstrated in mice models. Hence, this study
     highlights the potential of AIE-based PTT augmenting STING agonist activation for the synergistic photothermal immunotherapy
     of TNBC.'
-  citations: []
+  citations:
+  - marker: '1'
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: 2,3
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: '4'
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: '5'
+    intent_label: Importance of Problem
+    topic_label: Photothermal conversion applications
+  - marker: 6−10
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: 11−13
+    intent_label: Importance of Problem
+    topic_label: Photothermal conversion applications
+  - marker: '14'
+    intent_label: Problem Formulation
+    topic_label: Photothermal conversion applications
+  - marker: '15'
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: 16−19
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: 20,21
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: 22,23
+    intent_label: Research Gap
+    topic_label: Photothermal conversion applications
+  - marker: '24'
+    intent_label: Research Gap
+    topic_label: Photothermal conversion applications
+  - marker: 17,25,26
+    intent_label: Research Gap
+    topic_label: Photothermal conversion applications
+  - marker: 27−31
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: 32,33
+    intent_label: Research Gap
+    topic_label: Radiative decay pathways for bright emission
+  - marker: 34−36
+    intent_label: Domain Overview
+    topic_label: Nonradiative photothermal conversion
+  - marker: 37,38
+    intent_label: Domain Overview
+    topic_label: Photothermal conversion applications
+  - marker: 39−41
+    intent_label: Prior Methods
+    topic_label: Doping and encapsulation into polymer matrices
 - block_id: 2
   content: ''
   citations: []
