--- a/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_1.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_1.yaml
@@ -10,7 +10,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
+  - "Importance of Problem"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
 - "unique_context_marker": "6"
@@ -66,14 +66,14 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Importance of Problem"
+  - "Domain Overview"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "Polyelectrolyte architectures and single-chain aggregates"
 - "unique_context_marker": "24−28"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
 - "unique_context_marker": "29"
@@ -152,7 +152,7 @@
   - 3
   "intent_labels":
   - "Algorithm/Principle Adoption"
-  - "Prior Methods"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "In situ and charge-generating polymerizations"
   - "Other Topic"
@@ -188,9 +188,9 @@
   "block_ids":
   - 6
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Resource Utilization"
   "topic_labels":
-  - "Chemosensing and analyte detection"
+  - "Photosensitization for ROS generation"
 - "unique_context_marker": "57"
   "block_ids":
   - 6
@@ -202,9 +202,9 @@
   "block_ids":
   - 6
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Resource Utilization"
   "topic_labels":
-  - "Chemosensing and analyte detection"
+  - "Photosensitization for ROS generation"
 - "unique_context_marker": "39"
   "block_ids":
   - 7
@@ -225,7 +225,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Characteristic interactions in charged systems"
+  - "Photodynamic therapy and antimicrobial treatment"
 - "unique_context_marker": "63"
   "block_ids":
   - 7
