--- a/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_10.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/cot_output_gpt-5-2025-08-07/paper_10.yaml
@@ -3,100 +3,100 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prospective Application"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[11]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Importance of Problem"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[12,13]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[17,18]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Doping and encapsulation into polymer matrices"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[19,20]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[21,22]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[23]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[24]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[25,26]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[27–29]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[30,31]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Chemosensing and analyte detection"
+  - "aggregation-induced emission"
 - "unique_context_marker": "[32]"
   "block_ids":
   - 1
@@ -124,14 +124,14 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photophysical responsive systems"
+  - "Chemosensing and analyte detection"
 - "unique_context_marker": "[36]"
   "block_ids":
   - 4
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photophysical responsive systems"
+  - "Chemosensing and analyte detection"
 - "unique_context_marker": "[37]"
   "block_ids":
   - 5
@@ -143,14 +143,14 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Domain Overview"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Photophysical responsive systems"
+  - "Doping and encapsulation into polymer matrices"
 - "unique_context_marker": "[39]"
   "block_ids":
   - 5
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Supramolecular strategies"
 - "unique_context_marker": "[40]"
@@ -180,11 +180,11 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Supramolecular strategies"
+  - "Hydrogen-bonded polymer networks and gels"
 - "unique_context_marker": "[46]"
   "block_ids":
   - 8
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Supramolecular strategies"
+  - "Hydrogen-bonded polymer networks and gels"
