--- a/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-2025-08-07/paper_2.yaml
@@ -1,291 +1,293 @@
 "citations":
-- "title": "Preparation of Biomimetic Photoresponsive Polymer Springs"
-  "unique_context_marker": "(1)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Making Waves in a Photoactive Polymer Film"
-  "unique_context_marker": "(2)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Conformational Photoswitching of a Synthetic Peptide Foldamer Bound within a Phospholipid Bilayer"
-  "unique_context_marker": "(3)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Photo-Responsive Fluorescent Materials with Aggregation-Induced Emission Characteristics"
-  "unique_context_marker": "(4)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Erratum: Silicon Optical Modulators"
-  "unique_context_marker": "(5)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Adhesive Photoswitch: Selective Photochemical Modulation of Enzymes under Physiological Conditions"
-  "unique_context_marker": "(6)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "3D Printed Photoresponsive Materials for Photonics"
-  "unique_context_marker": "(7)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Hierarchical Self-Assembled Photo-Responsive Tubisomes from a Cyclic Peptide-Bridged Amphiphilic Block Copolymer"
-  "unique_context_marker": "(8)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Reversible Ion-Conducting Switch in a Novel Single-Ion Supramolecular Hydrogel Enabled by Photoresponsive Host −Guest Molecular Recognition"
-  "unique_context_marker": "(9)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Photoacid Generators. Application and Current State of Development"
-  "unique_context_marker": "(10)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Photoswitching of Enzyme Activity by Laser-Induced pH-Jump"
-  "unique_context_marker": "(11)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Stereoselective Synthesis of 2-Deoxyglycosides from Glycals by Visible-Light-Induced Photoacid Catalysis"
-  "unique_context_marker": "(12)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Recent Advances and Challenges in the Design of Organic Photoacid and Photobase Generators for Polymerizations"
-  "unique_context_marker": "(13)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Photo-Responsive Polymers: Synthesis and Applications"
-  "unique_context_marker": "(14)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Design and Applications of Photoresponsive Hydrogels"
-  "unique_context_marker": "(15)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Photochemical Cleavage Reaction of 8-Quinolinyl Sulfonates That Are Halogenated and Nitrated at the 7-Position"
-  "unique_context_marker": "(16)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Novel Polymeric Nonionic Photoacid Generators and Corresponding Polymer Langmuir−Blodgett (Lb) Films for Photopatterning"
-  "unique_context_marker": "(17)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Photochemical Cleavage Reactions of 8-Quinolinyl Sulfonates in Aqueous Solution"
-  "unique_context_marker": "(18)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Vinyl Sulfonate Esters: Efficient Chain Transfer Agents for the 3D Printing of Tough Photopolymers without Retardation"
-  "unique_context_marker": "(19)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Aromatic Polysulfonates: Preparation and Properties"
-  "unique_context_marker": "(20)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Polymerization of 4-Hydroxybenzenesulfonyl Chloride"
-  "unique_context_marker": "(21)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "SuFEx-Based Polysulfonate Formation from Ethenesulfonyl Fluoride−Amine Adducts"
-  "unique_context_marker": "(22)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Bifluoride-Catalysed Sulfur(VI) Fluoride Exchange Reaction for the Synthesis of Polysulfates and Polysulfonates"
-  "unique_context_marker": "(23)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "New Polymers from SuFEx Click Chemistry: Syntheses and Perspectives"
-  "unique_context_marker": "(24)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Facile Synthesis of Sequence-Regulated Synthetic Polymers Using Orthogonal SuFEx and CuAAC Click Reactions"
-  "unique_context_marker": "(25)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Hydrogen Bonding Cluster-Enabled Addition of Sulfonic Acids to Haloalkynes: Access to Both (E)- and (Z)-Alkenyl Sulfonates"
-  "unique_context_marker": "(26)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Transition-Metal Free Mechanochemical Approach to Polyyne Substituted Pyrroles"
-  "unique_context_marker": "(27)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Transition-Metal-Free Polymerization of Bromoalkynes and Phenols"
-  "unique_context_marker": "(28)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Dynamic Figure Eight Chirality: Multifarious Inversions of a Helical Preference Induced by Complexation"
-  "unique_context_marker": "(29)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A Reiterative Approach to 2,3-Disubstituted Naphthalenes and Anthracenes"
-  "unique_context_marker": "(30)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Hexafluoroisopropanol as a Highly Versatile Solvent"
-  "unique_context_marker": "(31)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Model Studies on the Photochemistry of Phenolic Sulfonate Photoacid Generators"
-  "unique_context_marker": "(32)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Ultrabright Fluorescent Polymer Dots with Thermochromic Characteristics for Full-Color Security Marking"
-  "unique_context_marker": "(33)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Three-Component Regio- and Stereoselective Polymerizations toward Functional Chalcogen-Rich Polymers with AIE-Activities"
-  "unique_context_marker": "(34)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Facile Multicomponent Polymerizations toward Unconventional Luminescent Polymers with Readily Openable Small Heterocycles"
-  "unique_context_marker": "(35)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Multicolor Luminescence Patterning by Photoactivation of Semiconductor Nanoparticle Films"
-  "unique_context_marker": "(36)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Förster Resonance Energy Transfer Regulated Multicolor Photopatterning from Single Quantum Dot Nanohybrid Films"
-  "unique_context_marker": "(37)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Large-Area Multicolor Emissive Patterns of Quantum Dot−Polymer Films Via Targeted Recovery of Emission Signature"
-  "unique_context_marker": "(38)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "From 1D to 3D: A New Route to Fabricate Tridimensional Structures Via Photo-Generation of Silver Networks"
-  "unique_context_marker": "(39)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Ordered Hybrid Micro/Nanostructures and Their Optical Applications"
-  "unique_context_marker": "(40)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Hierarchical Polymer Brush Nanoarrays: A Versatile Way to Prepare Multiscale Patterns of Proteins"
-  "unique_context_marker": "(41)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Bio-Inspired Photonic Crystal Patterns"
-  "unique_context_marker": "(42)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Physical Properties of Polymers Handbook"
-  "unique_context_marker": "(43)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Photoresponsive Spiro-Polymers Generated in Situ by C−H-Activated Polyspiroannulation"
-  "unique_context_marker": "(44)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Luminescent Solar Concentrators: Boosted Optical Efficiency by Polymer Dielectric Mirrors"
-  "unique_context_marker": "(45)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Luminescent Solar Concentrators Based on Renewable Polyester Matrices"
-  "unique_context_marker": "(46)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A 4,4′-Bis(2-Benzoxazolyl)Stilbene Luminescent Probe: Assessment of Aggregate Formation through Photophysics Experiments and Quantum-Chemical Calculations"
-  "unique_context_marker": "(47)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Fluorescent Polystyrene Films for the Detection of Volatile Organic Compounds Using the Twisted Intramolecular Charge Transfer Mechanism"
-  "unique_context_marker": "(48)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Controllable Targeted Accumulation of Fluorescent Conjugated Polymers on Bacteria Mediated by a Saccharide Bridge"
-  "unique_context_marker": "(49)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Water-Soluble Conjugated Polymers for Imaging, Diagnosis, and Therapy"
-  "unique_context_marker": "(50)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Conjugated Polymer-Coated Bacteria for Multimodal Intracellular and Extracellular Anticancer Activity"
-  "unique_context_marker": "(51)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Supramolecular Antibacterial Materials for Combatting Antibiotic Resistance"
-  "unique_context_marker": "(52)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A Polycationic Antimicrobial and Biocompatible Hydrogel with Microbe Membrane Suctioning Ability"
-  "unique_context_marker": "(53)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Visible Light Mediated Killing of Multidrug-Resistant Bacteria Using Photoacids"
-  "unique_context_marker": "(54)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "In Situ Generation of Azonia-Containing Polyelectrolytes for Luminescent Photopatterning and Superbug Killing"
-  "unique_context_marker": "(55)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Engineering Live Cell Surfaces with Functional Polymers Via Cytocompatible Controlled Radical Polymerization"
-  "unique_context_marker": "(56)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "A Facile Strategy for Fabrication of Aggregation-Induced Emission (AIE) Active Fluorescent Polymeric Nanoparticles (FPNs) Via Post Modification of Synthetic Polymers and Their Cell Imaging"
-  "unique_context_marker": "(57)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Facile One-Pot Synthesis of New Functional Polymers through Multicomponent Systems"
-  "unique_context_marker": "(58)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
+- "unique_context_marker": "[1]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photobiosynthesis enhancement"
+    - "Photobiosynthesis enhancement"
+    - "Photobiosynthesis enhancement"
+    - "Photobiosynthesis enhancement"
+    - "Photobiosynthesis enhancement"
+- "unique_context_marker": "[2,3]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[4,5]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[6−9]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Applications of AIE materials"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[10]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[11]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[12]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[13]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[14,15]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Construction of photoresponsive AIE polymers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "Side-chain copolymerization with monofunctional units"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+- "unique_context_marker": "[16−19]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[20,21]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+  "topic_labels":
+  - - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "Construction of photoresponsive AIE polymers"
+    - "Main-chain copolymerization of difunctional monomers"
+- "unique_context_marker": "[22−24]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "In situ and charge-generating polymerizations"
+    - "Main-chain copolymerization of difunctional monomers"
+- "unique_context_marker": "[25]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "In situ and charge-generating polymerizations"
+    - "Main-chain copolymerization of difunctional monomers"
+- "unique_context_marker": "[26]"
+  "block_ids":
+  - 1
+  - 5
+  "intent_labels":
+  - - "Domain Overview"
+    - "Resource Utilization"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+  - - "Algorithm/Principle Adoption"
+    - "Algorithm/Principle Adoption"
+    - "Algorithm/Principle Adoption"
+    - "Algorithm/Principle Adoption"
+    - "Algorithm/Principle Adoption"
+  "topic_labels":
+  - []
+  - - "In situ and charge-generating polymerizations"
+    - "Supramolecular strategies"
+    - "In situ and charge-generating polymerizations"
+    - "In situ and charge-generating polymerizations"
+    - "In situ and charge-generating polymerizations"
+- "unique_context_marker": "[27−30]"
+  "block_ids":
+  - 3
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "Main-chain copolymerization of difunctional monomers"
+    - "In situ and charge-generating polymerizations"
+- "unique_context_marker": "[31]"
+  "block_ids":
+  - 3
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Hydrogen-bonded polymer networks and gels"
+    - "Hydrogen-bonded polymer networks and gels"
+    - "Hydrogen-bonded polymer networks and gels"
+    - "Hydrogen-bonded polymer networks and gels"
+    - "Supramolecular strategies"
+- "unique_context_marker": "[26,31]"
+  "block_ids":
+  - 5
+  "intent_labels":
+  - - "Domain Overview"
+    - "Algorithm/Principle Adoption"
+    - "Domain Overview"
+    - "Algorithm/Principle Adoption"
+    - "Algorithm/Principle Adoption"
+  "topic_labels":
+  - []
+- "unique_context_marker": "[16,18,32]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[32]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+  "topic_labels":
+  - []
+- "unique_context_marker": "[33]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - - "Prospective Application"
+    - "Prospective Application"
+    - "Prospective Application"
+    - "Prospective Application"
+    - "Prospective Application"
+  "topic_labels":
+  - []
+- "unique_context_marker": "[34,35]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[36]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[37,38]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[39−41]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[42]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - - "Importance of Problem"
+    - "Importance of Problem"
+    - "Importance of Problem"
+    - "Importance of Problem"
+    - "Importance of Problem"
+  "topic_labels":
+  - []
+- "unique_context_marker": "[43]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+- "unique_context_marker": "[44−48]"
+  "block_ids":
+  - 8
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[49−53]"
+  "block_ids":
+  - 9
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[54]"
+  "block_ids":
+  - 9
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photolysis and degradable systems"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photolysis and degradable systems"
+    - "Photolysis and degradable systems"
+    - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[55]"
+  "block_ids":
+  - 9
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
+- "unique_context_marker": "[56−58]"
+  "block_ids":
+  - 10
+  "intent_labels":
+  - []
+  "topic_labels":
+  - []
