--- a/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-2025-08-07/paper_6.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-2025-08-07/paper_6.yaml
@@ -1,28 +1,12 @@
 "citations":
-- "title": ""
-  "unique_context_marker": "[1] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[1] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[1] c)"
+- "unique_context_marker": "[1]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
-  - - "Characteristic interactions in charged systems"
-    - "Characteristic interactions in charged systems"
-    - "Polyelectrolyte architectures and single-chain aggregates"
-    - "Characteristic interactions in charged systems"
-    - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[2]"
+  - []
+- "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
@@ -33,40 +17,35 @@
     - "Research Gap"
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[3]"
+- "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[4]"
+- "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[5]"
+- "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[6]"
+- "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[7]"
+- "unique_context_marker": "[7]"
   "block_ids":
   - 1
   "intent_labels":
@@ -77,23 +56,7 @@
     - "Research Gap"
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[8] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[8] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[8] c)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[8] d)"
+- "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
@@ -104,18 +67,7 @@
     - "Polyelectrolyte architectures and single-chain aggregates"
     - "Polyelectrolyte architectures and single-chain aggregates"
     - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[9] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[9] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[9] c)"
+- "unique_context_marker": "[9]"
   "block_ids":
   - 1
   "intent_labels":
@@ -124,10 +76,9 @@
   - - "Polyelectrolyte architectures and single-chain aggregates"
     - "Main-chain copolymerization of difunctional monomers"
     - "Main-chain copolymerization of difunctional monomers"
-    - "Main-chain copolymerization of difunctional monomers"
     - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[10]"
+    - "Polyelectrolyte architectures and single-chain aggregates"
+- "unique_context_marker": "[10]"
   "block_ids":
   - 1
   "intent_labels":
@@ -136,25 +87,9 @@
   - - "Polyelectrolyte architectures and single-chain aggregates"
     - "Main-chain copolymerization of difunctional monomers"
     - "Main-chain copolymerization of difunctional monomers"
-    - "Main-chain copolymerization of difunctional monomers"
     - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[11] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[11] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[11] c)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[11] d)"
+    - "Polyelectrolyte architectures and single-chain aggregates"
+- "unique_context_marker": "[11]"
   "block_ids":
   - 1
   "intent_labels":
@@ -163,10 +98,9 @@
   - - "Polyelectrolyte architectures and single-chain aggregates"
     - "Main-chain copolymerization of difunctional monomers"
     - "Main-chain copolymerization of difunctional monomers"
-    - "Main-chain copolymerization of difunctional monomers"
     - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[12]"
+    - "Polyelectrolyte architectures and single-chain aggregates"
+- "unique_context_marker": "[12]"
   "block_ids":
   - 1
   "intent_labels":
@@ -175,18 +109,16 @@
   - - "Polyelectrolyte architectures and single-chain aggregates"
     - "Main-chain copolymerization of difunctional monomers"
     - "Main-chain copolymerization of difunctional monomers"
-    - "Main-chain copolymerization of difunctional monomers"
     - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[13]"
+    - "Polyelectrolyte architectures and single-chain aggregates"
+- "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[14]"
+- "unique_context_marker": "[14]"
   "block_ids":
   - 1
   "intent_labels":
@@ -194,37 +126,21 @@
     - "Prior Methods"
     - "Research Gap"
     - "Research Gap"
-    - "Research Gap"
+    - "Prior Methods"
   "topic_labels":
-  - - "Characteristic interactions in charged systems"
+  - - "Polyelectrolyte architectures and single-chain aggregates"
     - "Main-chain copolymerization of difunctional monomers"
     - "Main-chain copolymerization of difunctional monomers"
     - "Main-chain copolymerization of difunctional monomers"
-    - "Main-chain copolymerization of difunctional monomers"
-- "title": ""
-  "unique_context_marker": "[15] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[15] b)"
+    - "Characteristic interactions in charged systems"
+- "unique_context_marker": "[15]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
-  - - "In situ and charge-generating polymerizations"
-    - "In situ and charge-generating polymerizations"
-    - "In situ and charge-generating polymerizations"
-    - "In situ and charge-generating polymerizations"
-    - "In situ and charge-generating polymerizations"
-- "title": ""
-  "unique_context_marker": "[16] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[16] b)"
+  - []
+- "unique_context_marker": "[16]"
   "block_ids":
   - 1
   "intent_labels":
@@ -235,182 +151,107 @@
     - "Domain Overview"
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[17] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[17] b)"
+- "unique_context_marker": "[17]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[18]"
+- "unique_context_marker": "[18]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[19] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[19] b)"
+- "unique_context_marker": "[19]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+  "topic_labels":
+  - []
+- "unique_context_marker": "[20]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Radiative decay pathways for bright emission"
+    - "Radiative decay pathways for bright emission"
+    - "Radiative decay pathways for bright emission"
+    - "Applications of AIE materials"
+    - "Radiative decay pathways for bright emission"
+- "unique_context_marker": "[21]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[20] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[20] b)"
+- "unique_context_marker": "[14,22]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Prospective Application"
+    - "Prospective Application"
+    - "Prospective Application"
+  "topic_labels":
+  - []
+- "unique_context_marker": "[23]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[21] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[21] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[21] c)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[21] d)"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[22] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[22] b)"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[23] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23] c)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23] d)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23] e)"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[24]"
+- "unique_context_marker": "[24]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
   - []
-  - - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
+  - []
   "topic_labels":
   - []
   - []
-- "title": ""
-  "unique_context_marker": "[25]"
+- "unique_context_marker": "[25]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "In situ and charge-generating polymerizations"
-    - "Main-chain copolymerization of difunctional monomers"
+  - - "Main-chain copolymerization of difunctional monomers"
     - "In situ and charge-generating polymerizations"
     - "In situ and charge-generating polymerizations"
     - "In situ and charge-generating polymerizations"
-- "title": ""
-  "unique_context_marker": "[26] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[26] b)"
+    - "In situ and charge-generating polymerizations"
+- "unique_context_marker": "[26]"
+  "block_ids":
+  - 2
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Polyelectrolyte architectures and single-chain aggregates"
+    - "Polyelectrolyte architectures and single-chain aggregates"
+    - "Polyelectrolyte architectures and single-chain aggregates"
+    - "Polyelectrolyte architectures and single-chain aggregates"
+    - "Polyelectrolyte architectures and single-chain aggregates"
+- "unique_context_marker": "[28]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": "Polymer Science: A Comprehensive Reference"
-  "unique_context_marker": "[27]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[28]"
-  "block_ids":
-  - 2
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[29] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[29] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[29] c)"
+- "unique_context_marker": "[29]"
   "block_ids":
   - 2
   "intent_labels":
@@ -421,92 +262,68 @@
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
-- "title": ""
-  "unique_context_marker": "[30]"
+- "unique_context_marker": "[30]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "Photophysical responsive systems"
-    - "Characteristic interactions in charged systems"
-    - "Characteristic interactions in charged systems"
+  - - "Rotor-rich ionic cores and donor–acceptor scaffolds"
+    - "Rotor-rich ionic cores and donor–acceptor scaffolds"
+    - "Rotor-rich ionic cores and donor–acceptor scaffolds"
     - "Characteristic interactions in charged systems"
     - "Rotor-rich ionic cores and donor–acceptor scaffolds"
-- "title": "Physical Properties of Polymers Handbook"
-  "unique_context_marker": "[31]"
+- "unique_context_marker": "[31]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "Applications of AIE materials"
-    - "Photopatterning and optical data storage"
-    - "Processing and additive manufacturing methods"
+  - - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
-- "title": ""
-  "unique_context_marker": "[32] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[32] b)"
+    - "Photopatterning and optical data storage"
+    - "Doping and encapsulation into polymer matrices"
+- "unique_context_marker": "[32]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[33]"
+- "unique_context_marker": "[19b,33]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[34] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[34] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[34] c)"
+- "unique_context_marker": "[34]"
+  "block_ids":
+  - 2
+  "intent_labels":
+  - []
+  "topic_labels":
+  - - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+- "unique_context_marker": "[35]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
   - []
-- "title": ""
-  "unique_context_marker": "[35] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[35] b)"
+- "unique_context_marker": "[36]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - []
-- "title": ""
-  "unique_context_marker": "[36] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[36] b)"
-  "block_ids":
-  - 2
-  "intent_labels":
-  - []
-  "topic_labels":
-  - []
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
