--- a/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-2025-08-07/paper_10.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-2025-08-07/paper_10.yaml
@@ -1,324 +1,187 @@
 "citations":
-- "title": ""
-  "unique_context_marker": "[1]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[2]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[3]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[4]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[5]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Kinesiology-E-Book: The Skeletal System and Muscle Function"
-  "unique_context_marker": "[6]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": "Clinical Guide to Sports Injuries"
-  "unique_context_marker": "[7]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[8]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[9]"
+- "unique_context_marker": "[9,10]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - "Prospective Application"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[11]"
   "block_ids":
   - 1
   "intent_labels":
   - "Importance of Problem"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[10]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Importance of Problem"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[11]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Importance of Problem"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[12]"
+- "unique_context_marker": "[12,13]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[13]"
+- "unique_context_marker": "[14]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[14]"
+- "unique_context_marker": "[15]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[15]"
+- "unique_context_marker": "[16]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[16]"
+- "unique_context_marker": "[17,18]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[17]"
+- "unique_context_marker": "[19,20]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[18]"
+- "unique_context_marker": "[21,22]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[19]"
+- "unique_context_marker": "[23]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[20]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Prior Methods"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[21]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Prior Methods"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[22]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Prior Methods"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[23]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Prior Methods"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[24]"
+- "unique_context_marker": "[24]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[25]"
+- "unique_context_marker": "[25,26]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[26]"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Prior Methods"
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[27]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[28]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[29]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[30]"
+- "unique_context_marker": "[27–29]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[31]"
+- "unique_context_marker": "[30,31]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[32]"
+- "unique_context_marker": "[32]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[33]"
+- "unique_context_marker": "[33]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[34]"
+  - "Radiative decay pathways for bright emission"
+- "unique_context_marker": "[34]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[35]"
+  - "Rotor-rich ionic cores and donor–acceptor scaffolds"
+- "unique_context_marker": "[35]"
   "block_ids":
   - 4
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[36]"
+- "unique_context_marker": "[36]"
   "block_ids":
   - 4
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": "Principles of Optics: Electromagnetic Theory of Propagation, Interference, and Diffraction of Light"
-  "unique_context_marker": "[37]"
+- "unique_context_marker": "[37]"
+  "block_ids":
+  - 5
+  "intent_labels":
+  - "Algorithm/Principle Adoption"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[38]"
   "block_ids":
   - 5
   "intent_labels":
   - null
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[38]"
+- "unique_context_marker": "[39]"
   "block_ids":
   - 5
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[39]"
-  "block_ids":
-  - 5
-  "intent_labels":
-  - null
-  "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[40]"
+- "unique_context_marker": "[40]"
   "block_ids":
   - 6
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[41]"
+- "unique_context_marker": "[41]"
   "block_ids":
   - 6
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[42]"
+- "unique_context_marker": "[42]"
   "block_ids":
   - 6
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[43]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[44]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[45]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[46]"
+- "unique_context_marker": "[43–45]"
+  "block_ids":
+  - 7
+  "intent_labels":
+  - "Domain Overview"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[46]"
   "block_ids":
   - 8
   "intent_labels":
