--- a/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-2025-08-07/paper_6.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-2025-08-07/paper_6.yaml
@@ -1,305 +1,166 @@
 "citations":
-- "title": ""
-  "unique_context_marker": "[1] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[1] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[1] c)"
+- "unique_context_marker": "[1]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Characteristic interactions in charged systems"
-- "title": ""
-  "unique_context_marker": "[2]"
+- "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[3]"
+- "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[4]"
+- "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[5]"
+- "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[6]"
+- "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[7]"
+- "unique_context_marker": "[7]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[8] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[8] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[8] c)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[8] d)"
+- "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[9] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[9] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[9] c)"
+- "unique_context_marker": "[9]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[10]"
+- "unique_context_marker": "[10]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[11] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[11] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[11] c)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[11] d)"
+- "unique_context_marker": "[11]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[12]"
+- "unique_context_marker": "[12]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[13]"
+- "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
   - "Postmodification of polymer precursors"
-- "title": ""
-  "unique_context_marker": "[14]"
+- "unique_context_marker": "[14]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Prior Methods"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[15] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[15] b)"
+- "unique_context_marker": "[15]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - null
-- "title": ""
-  "unique_context_marker": "[16] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[16] b)"
+  - "In situ and charge-generating polymerizations"
+- "unique_context_marker": "[16]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - "Prior Methods"
+  "topic_labels":
+  - "Polyelectrolyte architectures and single-chain aggregates"
+- "unique_context_marker": "[17]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[17] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[17] b)"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Research Gap"
-  "topic_labels":
-  - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": ""
-  "unique_context_marker": "[18]"
+- "unique_context_marker": "[18]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Characteristic interactions in charged systems"
-- "title": ""
-  "unique_context_marker": "[19] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[19] b)"
-  "block_ids":
-  - 1
-  "intent_labels":
-  - "Domain Overview"
-  "topic_labels":
-  - "Radiative decay pathways for bright emission"
-- "title": ""
-  "unique_context_marker": "[20] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[20] b)"
+- "unique_context_marker": "[19]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
   - "Radiative decay pathways for bright emission"
-- "title": ""
-  "unique_context_marker": "[21] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[21] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[21] c)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[21] d)"
+- "unique_context_marker": "[20]"
+  "block_ids":
+  - 1
+  "intent_labels":
+  - "Prospective Application"
+  "topic_labels":
+  - null
+- "unique_context_marker": "[21]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
   - "Photosensitization for ROS generation"
-- "title": ""
-  "unique_context_marker": "[22] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[22] b)"
+- "unique_context_marker": "[14,22]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
   - "Characteristic interactions in charged systems"
-- "title": ""
-  "unique_context_marker": "[23] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23] c)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23] d)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[23] e)"
+- "unique_context_marker": "[23]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Photopatterning and optical data storage"
-- "title": ""
-  "unique_context_marker": "[24]"
+  - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[24]"
   "block_ids":
   - 1
   - 2
@@ -309,136 +170,80 @@
   "topic_labels":
   - "In situ and charge-generating polymerizations"
   - "In situ and charge-generating polymerizations"
-- "title": ""
-  "unique_context_marker": "[25]"
+- "unique_context_marker": "[25]"
   "block_ids":
   - 2
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[26] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[26] b)"
+- "unique_context_marker": "[26]"
   "block_ids":
   - 2
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Polyelectrolyte architectures and single-chain aggregates"
-- "title": "Polymer Science: A Comprehensive Reference"
-  "unique_context_marker": "[27]"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[28]"
+  - null
+- "unique_context_marker": "[28]"
   "block_ids":
   - 2
   "intent_labels":
   - "Research Gap"
   "topic_labels":
   - "Radiative decay pathways for bright emission"
-- "title": ""
-  "unique_context_marker": "[29] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[29] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[29] c)"
+- "unique_context_marker": "[29]"
   "block_ids":
   - 2
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[30]"
+- "unique_context_marker": "[30]"
   "block_ids":
   - 2
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - null
-- "title": "Physical Properties of Polymers Handbook"
-  "unique_context_marker": "[31]"
+- "unique_context_marker": "[31]"
   "block_ids":
   - 2
   "intent_labels":
   - "Result Comparison"
   "topic_labels":
   - null
-- "title": ""
-  "unique_context_marker": "[32] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[32] b)"
+- "unique_context_marker": "[32]"
   "block_ids":
   - 2
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
   - "Photopatterning and optical data storage"
-- "title": ""
-  "unique_context_marker": "[33]"
+- "unique_context_marker": "[19b,33]"
   "block_ids":
   - 2
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
   - "Photosensitization for ROS generation"
-- "title": ""
-  "unique_context_marker": "[34] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[34] b)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[34] c)"
+- "unique_context_marker": "[34]"
   "block_ids":
   - 2
   "intent_labels":
-  - "Importance of Problem"
+  - "Prospective Application"
   "topic_labels":
-  - "Photosensitization for ROS generation"
-- "title": ""
-  "unique_context_marker": "[35] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[35] b)"
+  - "Photodynamic therapy and antimicrobial treatment"
+- "unique_context_marker": "[35]"
   "block_ids":
   - 2
   "intent_labels":
   - "Metrics Utilization"
   "topic_labels":
   - "Photosensitization for ROS generation"
-- "title": ""
-  "unique_context_marker": "[36] a)"
-  "block_ids": []
-  "intent_labels": []
-  "topic_labels": []
-- "title": ""
-  "unique_context_marker": "[36] b)"
+- "unique_context_marker": "[36]"
   "block_ids":
   - 2
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - "Applications of AIE materials"
